--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 .ipynb_checkpoints/
 test_output.mp4
 test_videos_output/
+data
+*.h5
+models
+*.swp
+*.p
+MNIST_data/
+image/
+.floydexpt
+.floydignore
